<resources>
    <string name="app_name"></string>

    <string name="app_title">J5 Assignment</string>
    <string name="input_label_username">Username</string>
    <string name="input_label_password">Password</string>
    <string name="button_label_login">Login</string>
    <string name="error_login_invalid_credentials">Invalid credentials.</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_g_drive">GDriveActivity</string>
    <string name="button_label_local">Local Storage</string>
    <string name="button_label_gdrive">Google Drive</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>